# advent-of-code

./: .bumpversion.cfg  .dockerignore  .gitignore  .travis.yml  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  clippy.toml  codecov.yml  netlify.toml  post-input  post-input-cloudflare  post-input-fly  post-input-local-server  post-input-netlify  post-solution  run-wasm.js  run.js  run.ts  rust-toolchain  setup-single-problem.py  test.py
crates/cbindings/: Cargo.toml  README.md  build.rs  test-example.sh
crates/cbindings/example/: expected-output.txt  main.c
crates/cbindings/src/: lib.rs
crates/core/: Cargo.toml  Dockerfile  LICENSE.txt  MANPAGE.md  README.md  bloaty  compare-simd  create-flamegraph  failing-input.txt  get-input.py  inspect-crash.ers  o1.json  o2.json  process-bench.py  profile  reproduce-crash.ers  reproduce-crashes.sh  run-bench-linux  run-iai-benchmark.py  run-test-against-aoc.py  setup-benchmark-linux.sh  setup-single-problem.py
crates/core/benches/: bench.rs  benchmark.rs  iai.rs
crates/core/fuzz/: Cargo.toml
crates/core/src/: common.rs  day01_input.txt  day02.rs  day03.rs  day03_input.txt  day05.rs  day06.rs  day07.rs  day10.rs  day11.rs  day11_part2_output.txt  day12.rs  day13.rs  day16.rs  day17.rs  day17_input.txt  day18.rs  day19.rs  day20_input_ray.txt  day22_input.txt  input.rs  lib.rs  main.rs  mod_exp.rs  painter.rs  permutation.rs  visualization.rs  visualizer.rs  year2016.rs  year2018.rs  year2020.rs  year2022.rs  year2025.rs
crates/core/src/common/: array_collect.rs  array_deque.rs  array_stack.rs  character_recognition.rs  chunk_iterator.rs  gpu.rs  highest_values.rs  id_assigner.rs  id_assigner_copy.rs  int_to_ascii.rs  iter_chain.rs  map_windows.rs  md5.rs  mod.rs  parse_lines.rs  permutation.rs  priority_queueu.rs  triple_window_iterator.rs  tuple_window_iterator.rs  u256.rs  window_iterator.rs
crates/core/src/year2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day07_input.txt  day08.rs  day08_input.txt  day09.rs  day10.rs  day11.rs  day11_input.txt  day12.rs  day12_input.txt  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day17_input.txt  day18.rs  day18_input.txt  day19.rs  day19_input.txt  day20.rs  day21.rs  day21_input.txt  day22.rs  day23.rs  day24.rs  day24_input.txt  day25.rs  day25_input.txt
crates/core/src/year2016/: assembunny.rs  day01.rs  day02.rs  day02_input.txt  day03.rs  day03_input.txt  day04.rs  day04_input.txt  day05.rs  day05_input.txt  day06.rs  day06_input.txt  day07.rs  day08.rs  day08_input.txt  day09.rs  day09_input.txt  day10.rs  day10_input.txt  day11.rs  day11_input.txt  day12.rs  day12_input.txt  day13.rs  day14.rs  day14_input.txt  day15.rs  day15_input.txt  day16.rs  day16_input.txt  day17.rs  day17_input.txt  day18.rs  day18_input.txt  day19.rs  day19_input.txt  day20.rs  day20_input.txt  day21.rs  day22.rs  (+7 more)
crates/core/src/year2017/: assembly.rs  day01.rs  day01_input.txt  day02.rs  day03.rs  day04.rs  day04_input.txt  day05.rs  day06.rs  day07.rs  day07_input.txt  day08.rs  day08_input.txt  day09.rs  day09_input.txt  day10.rs  day10_input.txt  day11.rs  day11_input.txt  day12.rs  day12_input.txt  day13.rs  day14.rs  day15.rs  day15_input.txt  day16.rs  day16_input.txt  day17.rs  day18.rs  day18_input.txt  day19.rs  day19_input.txt  day20.rs  day21.rs  day22.rs  day22_input.txt  day23.rs  day23_input.txt  day24.rs  day24_input.txt  (+3 more)
crates/core/src/year2018/: day01.rs  day02.rs  day02_input.txt  day03.rs  day03_input.txt  day04.rs  day04_input.txt  day05.rs  day06.rs  day07.rs  day07_input.txt  day08.rs  (+34 more)
crates/core/tests/: mixed_input_tests.rs
crates/cxxbindings/: Cargo.toml  README.md  build.rs  test-example.sh
crates/cxxbindings/example/: expected-output.txt  main.cpp
crates/cxxbindings/src/: lib.rs
crates/fuzzing-afl/: Cargo.toml  README.md  check-file.sh  check-seed.sh  fuzz.sh  process-files-for-upload.sh
crates/fuzzing-afl/src/: main.rs
crates/fuzzing-afl/testcase-dir/: day02_input.txt  day03_input.txt  day04_input.txt
crates/fuzzing-hfuzz/: Cargo.toml  README.md
crates/fuzzing-hfuzz/src/: main.rs
crates/fuzzing-libfuzzer/fuzz/: Cargo.toml
crates/grpc-server/: Cargo.toml  Dockerfile  README.md  build.rs  fly.toml
crates/grpc-server/proto/: advent.proto
crates/grpc-server/src/: main.rs
crates/http-server/: Cargo.toml  Dockerfile  README.md  fly.toml
crates/http-server/src/: main.rs
crates/java/: .gitignore  Cargo.toml  README.md  build-jar.sh  build-jni-libs.sh  test.sh
crates/java/java-example/: Main.java
crates/java/java-src/: build.gradle  build.gradle.kts  settings.gradle
crates/java/src/: lib.rs
crates/painter/: Cargo.toml  build.sh
crates/painter/src/: buffer.rs  drawer.rs  lib.rs
crates/python/: Cargo.toml  LICENSE.txt  README.md  requirements.txt  run-tests.sh  run_tests.py  setup.cfg  setup.py
crates/python/advent_of_code/: __init__.pyi  py.typed
crates/python/advent_of_code_cli/: main.py
crates/python/cli/: main.py
crates/python/src/: lib.rs
crates/python/tests/: test_solve.py
crates/svgplot/: Cargo.toml  README.md
crates/svgplot/src/: circle.rs  color.rs  common_attributes.rs  element.rs  escape.rs  group.rs  id.rs  lib.rs  path.rs  rect.rs  script.rs  stroke.rs  style.rs  svg_use.rs  transform.rs  view_box.rs
crates/wasm/: .eslintignore  .eslintrc.js  .prettierignore  Cargo.toml  Makefile  README.md  build-package.sh  cli.js  eslint.config.js  index.html  index.js  netlify.toml  package.json  publish-npm-module.sh  run-wasm.js  test.js  wrangler.toml
crates/wasm/functions/: package.json  solve.js
crates/wasm/site/: _redirect  api.html  gist-mapping.json  index.html  index.js  openapi.json  package.json  ringbuffer.js  update-gists.py  validate-gists.py  webpack.config.js  worker-api.js  worker-visualizer.js  worker-wasm.js  worker.js  write-changed-gists.py
crates/wasm/src/: lib.rs
crates/wasm/test-project/: package.json  test.js
crates/wasm/worker/: worker.js
crates/worker/: Cargo.toml  README.md  package.json  wrangler.toml
crates/worker/src/: lib.rs  utils.rs
(+456 files in other folders)
