[workspace]
members = [ "crates/*" ]
exclude = [ "crates/painter" ]
resolver = "2"

[workspace.package]
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
edition = "2021"
homepage = "https://github.com/fornwall/advent-of-code"
license = "MIT"
repository = "https://github.com/fornwall/advent-of-code"
rust-version = "1.83.0"
version = "2024.6.0"

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[profile.release-quickbuild]
inherits = "release"
lto = false
panic = 'abort'

[profile.bench]
lto = true
codegen-units = 1

[workspace.lints.rust]
deprecated = "deny"
single_use_lifetimes = "warn"
trivial_numeric_casts = "forbid"
unused_lifetimes = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# Individual lints:
new_without_default = "allow"
