[package]
authors.workspace = true
categories = ["algorithms", "rust-patterns"]
description = "Solutions to Advent of Code written in Rust"
edition.workspace = true
homepage.workspace = true
keywords = ["advent-of-code", "c", "cbindgen"]
license.workspace = true
name = "advent-of-code-c"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[build-dependencies]
cbindgen = "0"

[lib]
name = "advent_of_code"
doc = false
# crate-type = ["cdylib"]
crate-type = ["staticlib"]

[dependencies]
advent-of-code = { path = "../core" }
libc = "0"
