[package]
name = "advent-of-code"
version = "2019.12.359"
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
keywords = ["advent-of-code", "wasm", "webassembly", "node"]
categories = ["algorithms", "rust-patterns"]
repository = "https://github.com/fornwall/advent-of-code"
license = "MIT"
description = "Solutions to Advent of Code"
documentation = "https://docs.rs/advent-of-code/2019.12.359/advent_of_code/"
homepage = "https://github.com/fornwall/advent-of-code"
readme = "README.md"
edition = "2018"

[[bin]]
name = "advent-of-code"
bench = false

[lib]
bench = false
name = "advent_of_code"

[features]
debug-output = []
visualization = []
count-allocations = ["allocation-counter"]

[dependencies]
allocation-counter = { version = "0", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
