[package]
authors.workspace = true
categories = ["algorithms", "rust-patterns"]
description = "Solutions to Advent of Code"
documentation = "https://docs.rs/advent-of-code/"
edition.workspace = true
homepage.workspace = true
keywords = ["advent-of-code"]
license.workspace = true
name = "advent-of-code"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "advent-of-code"
bench = false
doc = false

[lib]
bench = false
name = "advent_of_code"

[features]
count-allocations = ["allocation-counter"]
debug-output = []
simd = []
visualization = ["svgplot"]

[dependencies]
allocation-counter = { version = "0", optional = true }
svgplot = { version="2022.0.53", path = "../svgplot", optional = true }

[dev-dependencies]
iai = "0"
criterion = { version = "0", default-features = false, features = [] }

[[bench]]
name = "benchmark"
harness = false

[[bench]]
# See https://bheisler.github.io/criterion.rs/book/iai/getting_started.html
name = "iai"
harness = false
