[package]
authors.workspace = true
categories = ["algorithms", "rust-patterns"]
description = "Solutions to Advent of Code"
documentation = "https://docs.rs/advent-of-code/"
edition.workspace = true
homepage.workspace = true
keywords = ["advent-of-code"]
license.workspace = true
name = "advent-of-code"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "advent-of-code"
bench = false
doc = false

[lib]
bench = false
name = "advent_of_code"

[features]
count-allocations = ["allocation-counter"]
debug-output = []
simd = []
visualization = ["svgplot"]
webgpu-compute = ["bytemuck", "pollster", "wgpu"]

[dependencies]
allocation-counter = { version = "0", optional = true }
bytemuck = { version = "1", optional = true }
pollster = { version = "0", optional = true }
svgplot = { version = "2024.18.0", path = "../svgplot", optional = true }
wgpu = { version = "23", optional = true }

[dev-dependencies]
iai = { git = "https://github.com/fornwall/iai.git" }
criterion = { version = "0", default-features = false, features = [] }

[[bench]]
name = "benchmark"
harness = false

[[bench]]
# See https://bheisler.github.io/criterion.rs/book/iai/getting_started.html
name = "iai"
harness = false
