[package]
name = "advent-of-code-cxx"
version = "2019.12.412"
keywords = ["advent-of-code", "c++", "cxx"]
categories = ["algorithms", "rust-patterns"]
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
repository = "https://github.com/fornwall/advent-of-code"
description = "Solutions to Advent of Code written in Rust"
license = "MIT"
edition = "2021"

[lib]
name = "advent_of_code"
doc = false
# crate-type = ["cdylib"]
crate-type = ["staticlib"]

[dependencies]
advent-of-code = { path = "../core" }
cxx = "1"

[build-dependencies]
cxx-build = "1"
