[package]
authors.workspace = true
categories = ["algorithms", "rust-patterns"]
description = "Solutions to Advent of Code written in Rust"
edition.workspace = true
homepage.workspace = true
keywords = ["advent-of-code", "c++", "cxx"]
license.workspace = true
name = "advent-of-code-cxx"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
name = "advent_of_code"
doc = false
# crate-type = ["cdylib"]
crate-type = ["staticlib"]

[dependencies]
advent-of-code = { path = "../core" }
cxx = "1"

[build-dependencies]
cxx-build = "1"
