[package]
authors.workspace = true
categories = ["algorithms", "rust-patterns"]
description = "Fuzzing of solutions to Advent of Code written in Rust"
edition.workspace = true
homepage.workspace = true
keywords = ["advent-of-code", "rust", "afl", "fuzzing"]
license.workspace = true
name = "advent-of-code-fuzzing-afl"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
advent-of-code = { path = "../core" }
afl = "*"

