[package]
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
categories = ["algorithms", "rust-patterns"]
description = "Fuzzing of solutions to Advent of Code written in Rust"
edition = "2021"
keywords = ["advent-of-code", "rust", "afl", "fuzzing"]
license = "MIT"
name = "advent-of-code-fuzzing-afl"
repository = "https://github.com/fornwall/advent-of-code"
rust-version = "1.64"
version = "1.0.0"

[dependencies]
advent-of-code = { path = "../core" }
afl = "*"

