[package]
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
categories = ["algorithms", "rust-patterns"]
description = "Fuzzing of solutions to Advent of Code written in Rust"
edition.workspace = true
keywords = ["advent-of-code", "rust", "afl", "fuzzing"]
license = "MIT"
name = "advent-of-code-fuzzing-afl"
repository = "https://github.com/fornwall/advent-of-code"
version = "1.0.0"

[lints]
workspace = true

[dependencies]
advent-of-code = { path = "../core" }
afl = "*"

