[package]
name = "advent-of-code-grpc-server"
version = "2019.12.319"
keywords = ["advent-of-code", "rust", "warp"]
categories = ["algorithms", "rust-patterns", "grpc"]
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
repository = "https://github.com/fornwall/advent-of-code"
description = "Solutions to Advent of Code written in Rust"
license = "MIT"
readme = "../../README.md"
edition = "2018"

[dependencies]
advent-of-code = { path = "../core" }
prost = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
tonic = "0.4"

[build-dependencies]
tonic-build = "0.4"
