[package]
name = "advent-of-code-grpc-server"
version = "2019.12.451"
keywords = ["advent-of-code", "rust", "warp"]
categories = ["algorithms", "rust-patterns", "grpc"]
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
repository = "https://github.com/fornwall/advent-of-code"
description = "Solutions to Advent of Code written in Rust"
license = "MIT"
readme = "../../README.md"
edition = "2021"

[dependencies]
advent-of-code = { path = "../core" }
prost = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"]}
tonic = "*"
tonic-reflection = "*"

[build-dependencies]
tonic-build = "*"
