[package]
authors.workspace = true
categories = ["algorithms", "rust-patterns", "grpc"]
description = "Solutions to Advent of Code written in Rust"
edition.workspace = true
homepage.workspace = true
keywords = ["advent-of-code", "rust", "warp"]
license.workspace = true
name = "advent-of-code-grpc-server"
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
advent-of-code = { path = "../core" }
prost = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"]}
tonic = "*"
tonic-reflection = "*"

[build-dependencies]
tonic-build = "*"
