[package]
name = "advent-of-code-server"
version = "2019.12.422"
keywords = ["advent-of-code", "rust", "warp"]
categories = ["algorithms", "rust-patterns"]
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
repository = "https://github.com/fornwall/advent-of-code"
description = "Solutions to Advent of Code written in Rust"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
advent-of-code = { path = "../core" }
tokio = { version = "*", features = ["full"] }
warp = { version = "*", default-features = false }
