[package]
authors.workspace = true
categories = ["algorithms", "rust-patterns"]
description = "Solutions to Advent of Code written in Rust"
edition.workspace = true
homepage.workspace = true
keywords = ["advent-of-code", "rust", "warp"]
license.workspace = true
name = "advent-of-code-server"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
advent-of-code = { path = "../core" }
tokio = { version = "*", features = ["full"] }
warp = { version = "*", default-features = false }
