[package]
name = "advent-of-code-java"
version = "2019.12.425"
keywords = ["advent-of-code", "java", "jni"]
categories = ["algorithms", "rust-patterns"]
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
repository = "https://github.com/fornwall/advent-of-code"
description = "Solutions to Advent of Code written in Rust"
license = "MIT"
edition = "2021"

[lib]
doc = false
crate-type = ["cdylib"]

[dependencies]
advent-of-code = { path = "../core" }
jni = "*"

