[package]
authors.workspace = true
categories = ["algorithms", "rust-patterns"]
description = "Solutions to Advent of Code written in Rust"
edition.workspace = true
homepage.workspace = true
keywords = ["advent-of-code", "java", "jni"]
license.workspace = true
name = "advent-of-code-java"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
doc = false
crate-type = ["cdylib"]

[dependencies]
advent-of-code = { path = "../core" }
jni = "*"

