[package]
name = "advent-of-code-painter"
version = "0.1.0"
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
edition = "2021"

[dependencies]
js-sys = "*"
wasm-bindgen = "*"
web-sys = { version = "*", features = ['console', 'DedicatedWorkerGlobalScope'] }

[dependencies."advent-of-code"]
path = "../core"
features = ["visualization"]

[lib]
name = "advent_of_code_painter"
crate-type = ["cdylib", "rlib"]
