[package]
name = "advent-of-code-python"
version = "2019.12.56"
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
edition = "2018"

[lib]
name = "advent_of_code"
crate-type = ["cdylib"]

[dependencies]
advent-of-code = { path = "../core" }
pyo3 = { version = "*", features = ["extension-module"] }
