[package]
authors.workspace = true
categories = ["algorithms", "rust-patterns"]
description = "Solutions to Advent of Code written in Rust"
edition.workspace = true
homepage.workspace = true
keywords = ["advent-of-code", "python", "pyo3"]
license.workspace = true
name = "advent-of-code-python"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
name = "advent_of_code"
doc = false
crate-type = ["cdylib"]

[dependencies]
advent-of-code = { path = "../core" }
pyo3 = { version = "*", features = ["abi3-py312", "extension-module"] }
