[package]
name = "advent-of-code-wasm"
version = "2019.12.403"
keywords = ["advent-of-code", "wasm", "webassembly", "node"]
categories = ["algorithms", "rust-patterns", "wasm"]
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]
repository = "https://github.com/fornwall/advent-of-code"
license = "MIT"
description = "Solutions to Advent of Code written in Rust"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
visualization = [ "advent-of-code/visualization", "advent-of-code-painter" ]
console-panic-hook = [ "console_error_panic_hook" ]

[dependencies]
advent-of-code = { path = "../core" }
advent-of-code-painter = { path = "../painter", optional = true }
console_error_panic_hook = { version = "*", optional = true }
wasm-bindgen = "*"
js-sys = "*"
