[package]
authors.workspace = true
categories = ["algorithms", "rust-patterns", "wasm"]
description = "Solutions to Advent of Code written in Rust"
edition.workspace = true
homepage.workspace = true
keywords = ["advent-of-code", "wasm", "webassembly", "node"]
license.workspace = true
name = "advent-of-code-wasm"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
visualization = [ "advent-of-code/visualization", "advent-of-code-painter" ]
console-panic-hook = [ "console_error_panic_hook" ]

[dependencies]
advent-of-code = { path = "../core" }
advent-of-code-painter = { path = "../painter", optional = true }
console_error_panic_hook = { version = "*", optional = true }
wasm-bindgen = "*"
js-sys = "*"
