[package]
authors.workspace = true
description = "Cloudflare worker exposing an advent of code solver"
license = "MIT"
repository = "https://github.com/fornwall/advent-of-code"
categories = ["algorithms", "rust-patterns", "wasm"]
keywords = ["advent-of-code", "cloudflare"]
name = "advent-of-code-worker"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
advent-of-code = { path = "../core" }
cfg-if = "*"
# wasm-bindgen bump:
worker = { git = "https://github.com/cloudflare/workers-rs" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "*", optional = true }
